# dp-sequential-events

./: .gitignore  LICENSE  README.md  annotated.py  datos.csv  datos.dot  datos.txt  filtered.py  graph.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/dp-sequential-events/main/: annotated.py  filtered.py  main.py
src/dp_sequential_events/: cli.py
src/dp_sequential_events/databases/: anonymized_log_1.csv  anonymized_log_2.csv  anonymized_log_3.csv  synthetic-data-long.csv  synthetic_data_reg1.csv  synthetic_data_reg2.csv  synthetic_data_reg3.csv
src/dp_sequential_events/experiments/: evaluate_lstm.py  evaluate_toto.py  evaluate_tpto.py  generate-log.py  visualization_groups.py
src/dp_sequential_events/main/: annotated.py  case_sampling.py  filtered.py  generate-log.py  main.py  patterns.py  synthetic_data.csv
src/graph_protocol/: cli.py
src/graph_protocol/databases/: datos_sinteticos.csv
src/graph_protocol/main/: annotated.py  case_sampling.py  generate_synthetic_log.py
venvTest/: pyvenv.cfg
