[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"   

[project]
name = "dp-sequential-events"
version = "1.3.5"
authors = [
  { name="Marta Jones González", email="martajon10@gmail.com" },
]
description = "Privatized "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "contourpy",
    "cycler",
    "dafsa",
    "et_xmlfile",
    "fonttools",
    "graphviz",
    "kiwisolver",
    "matplotlib",
    "networkx",
    "numpy",
    "openpyxl",
    "packaging",
    "pandas",
    "pillow",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "scipy",
    "six",
    "tzdata"
]
packages = ["dp_sequential_events", "dp_sequential_events.main"]

[project.urls]
Homepage = "https://github.com/martaajonees/dp-sequential-events"
Issues = "https://github.com/martaajonees/dp-sequential-events/issues"

[project.scripts]
privseq = "dp_sequential_events.cli:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/dp_sequential_events"]

[tool.hatch.build.targets.sdist]
include = ["src/dp_sequential_events"]


